Bug 159251 - After using the navigator w/rtl user interface, text is garbled during selection / after hovering
Summary: After using the navigator w/rtl user interface, text is garbled during select...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.2
Keywords: bibisected, bisected, regression, text:rtl
Depends on:
Blocks: GTK3 RTL-UI
  Show dependency treegraph
 
Reported: 2024-01-17 21:55 UTC by Yotam Benshalom
Modified: 2024-03-05 03:26 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Selection is garbled after using the navigator (9.93 KB, application/vnd.oasis.opendocument.text)
2024-01-17 21:55 UTC, Yotam Benshalom
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yotam Benshalom 2024-01-17 21:55:21 UTC
Created attachment 192022 [details]
Selection is garbled after using the navigator

After using the navigator in order to jump to a section of the document, such as a certain heading, an index or a footnotes, text selection becomes erratic. During selection the selected text appears garbled or invisible.

To recreate:
1. Create a new document.
2. Type a heading (e.g. "This is a nice title"), and assign it a heading paragraph style (e.g. "Heading 1").
3. Use the mouse or the keyboard to select several words within the heading. All is well during selection.
4. Show the navigator on the side menue, and double-click on the name of the heading you created.
5. Repeat stage 3. Note that during selection, the selected text becomes invisible or garbled. This will everywhere on the document, not only on the heading. Once you finish making the selection, the text goes back to normal.

Only way of returning selection back to normal is to close and open the document, and avoid using the navigator.

See attached file for example: selection works normally, but breaks ater double-clicking the heading in the navigator.

I use ubuntu 23.10, Xorg, Nvidia proprietary driver. I use RTL interface, but this happens also with documents which contains English only (such as the attached file).
Comment 1 m_a_riosv 2024-01-17 22:50:15 UTC
Please can you paste the information in Menu/Help/About LibreOffice, there is an icon to copy.
Comment 2 Yotam Benshalom 2024-01-17 23:11:06 UTC
Version: 24.2.0.2 (X86_64) / LibreOffice Community
Build ID: 420(Build:2)
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: he-IL (he_IL.UTF-8); UI: he-IL
Ubuntu package version: 4:24.2.0~rc2-0ubuntu0.23.10.1~lo1
Calc: threaded
Comment 3 Yotam Benshalom 2024-01-29 02:13:43 UTC
Update: you don't even have to actually use the navigator to trigger this bug. It is enough to select one of the entries in the navigators to trigger it.
Comment 4 m_a_riosv 2024-01-29 21:00:09 UTC
Please test in safe mode, Menu/Help/Restart in Safe Mode
Comment 5 Yotam Benshalom 2024-01-29 21:28:08 UTC
This problem does not go away in safe mode.
Comment 6 m_a_riosv 2024-01-29 21:33:41 UTC
Please try enabling skia.
Menu/Tools/Options/LibreOffice/View
Comment 7 Yotam Benshalom 2024-01-29 21:40:22 UTC
I have no option called "skia" in Menu/Tools/Options/LibreOffice/View.
However, I found out that the problem dissappears when I use English interface instead of Hebrew (rtl) one.
Comment 8 Yotam Benshalom 2024-01-29 21:49:18 UTC
Disabling hardware acceleration and font antialiasing in Menu/Tools/Options/LibreOffice/View has no effect on the problem.
Comment 9 m_a_riosv 2024-01-29 23:04:17 UTC
Then try updating your graphics driver, if possible, from the vendor.
Comment 10 Yotam Benshalom 2024-01-29 23:29:17 UTC
My graphics card driver is updated (nvidia-driver 545.29.06-0ubuntu4).
Comment 11 Yotam Benshalom 2024-01-30 18:55:32 UTC
Even hovering above a navigator's entry and viewing its' tooltip triggers this bug.
Comment 12 stragu 2024-02-01 12:28:43 UTC
Reproduced by hovering on and off the heading in the Navigator in:

Version: 24.2.0.3 (X86_64) / LibreOffice Community
Build ID: da48488a73ddd66ea24cf16bbc4f7b9c08e9bea1
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Using:

SAL_RTL_ENABLED=1 libreoffice24.2

I see the heading jumping to the right, sometimes text disappears and reappears.

Not reproduced with gen VCL.
Not reproduced in 7.6.4.1.

Bibisected with linux-64-24.2 repo to first bad build [f82e39a249df5ead66b2f7c6846d49dc8ca2abbc] which points to:

commit 611694b707eb43e4c0f20b781f6869016a3ba099
author	Khaled Hosny 	Thu Aug 17 17:39:29 2023 +0300
committer	خالد حسني Thu Aug 24 13:17:49 2023 +0200
vcl: Allow pushing/popping OutputDevice’s RTLEnabled state
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155794

Khaled, can you please have a look?
Comment 13 Yotam Benshalom 2024-02-14 16:02:07 UTC
This issue seems to be resolved in current version:

Version: 24.2.0.1 (X86_64) / LibreOffice Community
Build ID: 420(Build:1)
CPU threads: 16; OS: Linux 6.6; UI render: default; VCL: gtk3
Locale: he-IL (he_IL.UTF-8); UI: he-IL
Ubuntu package version: 4:24.2.0~rc1-0ubuntu1
Calc: threaded

I wonder what it was...
Comment 14 Yotam Benshalom 2024-02-14 17:02:47 UTC
...sorry, erase that - new documents still suffer from the same problem.
Comment 15 Commit Notification 2024-02-24 12:41:31 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6cad38dece31eb035a9685ed8d123a74a0b69637

tdf#159251: Blind fix

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Yotam Benshalom 2024-02-26 16:22:35 UTC
issue is not resolved in current master:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d2fa44db6f8a1badece63856ee0f12db4cba9b28
CPU threads: 16; OS: Linux 6.6; UI render: default; VCL: gtk3
Locale: he-IL (he_IL.UTF-8); UI: en-US
Calc: CL threaded
Comment 17 Commit Notification 2024-02-26 17:39:19 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/17d147952564e5cdfff035ead943b3816e998b96

tdf#159251: Don’t use vcl::PushFlags::RTLENABLED

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2024-02-26 18:28:29 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1c7886d5d80389a876330a1d4a3a350a57126480

tdf#159251: Revert "vcl: Allow pushing/popping OutputDevice’s RTLEnabled

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2024-02-27 11:23:39 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/9393b6fcd08db7cb7776388393bb42d318b8a87b

tdf#159251: Blind fix

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Commit Notification 2024-02-27 11:23:42 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/672378476d214290a10cdaaa03f591bdd4a8ecf5

tdf#159251: Don’t use vcl::PushFlags::RTLENABLED

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2024-02-27 11:42:46 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/fb3b8d1c82dbbccf0bc456662a2a2d7e24da5fdd

tdf#159251: Revert "vcl: Allow pushing/popping OutputDevice’s RTLEnabled

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 stragu 2024-03-05 03:26:12 UTC
Thank you Khaled! Fix verified in:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e939685f9c6918830bd3097062790bfccbce937e
CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: CL threaded