tdf#159251: Blind fix

Hopefully fixes regression introduced in:

commit 611694b707eb43e4c0f20b781f6869016a3ba099
Author: Khaled Hosny <khaled@libreoffice.org>
Date:   Thu Aug 17 17:39:29 2023 +0300

    vcl: Allow pushing/popping OutputDevice’s RTLEnabled state

Change-Id: I9236bd6951d83a512390934127031204d94d14bb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163877
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@libreoffice.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164017